# rsqlite-wasm

./: .gitignore  LIMITATIONS.md  README.md  demo.html  test-wasm.mjs
.github/workflows/: ci.yml
crates/rsqlite-core/: Cargo.toml
crates/rsqlite-core/src/: catalog.rs  database.rs  database_tests.rs  eval_helpers.rs  executor.rs  lib.rs  plan_expr.rs  planner.rs
crates/rsqlite-core/src/database_tests/: basic.rs  constraints_integrity.rs  mod.rs  modern.rs  scalar_extras.rs  schema.rs  views_ctes_advanced.rs
crates/rsqlite-core/src/executor/: constraints.rs  ddl.rs  delete.rs  eval.rs  helpers.rs  insert.rs  mod.rs  pragma.rs  table_function.rs  trigger.rs  update.rs  vacuum.rs  window.rs
crates/rsqlite-core/src/vtab/: mod.rs  rtree.rs  vec_index.rs
crates/rsqlite-core/src/vtab/fts5/: bm25.rs  inverted_index.rs  mod.rs  persist.rs  query.rs  scalar.rs  tokenizer.rs
crates/rsqlite-parser/src/: parse.rs
crates/rsqlite-storage/src/: btree.rs  btree_write.rs  codec.rs  lib.rs  pager.rs
crates/rsqlite-wasm/: Cargo.toml
crates/rsqlite-wasm/src/: idb.rs  lib.rs  opfs.rs
js/: package-lock.json  package.json  vitest.config.ts
js/src/: devtools.ts  index.ts  types.ts  worker-proxy.ts  worker.ts
js/test/: devtools.test.ts
scripts/: coverage.sh
