[package]
name = "rsqlite-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Query planner, execution engine, and transaction manager for rsqlite-wasm"

[dependencies]
rsqlite-parser = { workspace = true }
rsqlite-storage = { workspace = true }
rsqlite-vfs = { workspace = true, features = ["native"] }
sqlparser = { workspace = true }
lru = { workspace = true }
thiserror = { workspace = true }
unicode-segmentation = "1.11"
unicode-normalization = "0.1"
